css/style.css
/* ... */
.service-wrapper h4,
.service-wrapper dt {
	font: 700 20px/24px "Lato", sans-serif
}
.service-wrapper dl {
	margin: 0;
}
.service-wrapper dt {
	margin-bottom: 20px;
}
.service-wrapper dd {
	border-bottom: 1px solid #e0e1e2;
	line-height: 36px;
	margin: 0;
}
.service-wrapper dd:last-child {
	border: none;
}
.service-wrapper .full-rounded {
	display: inline-block;
	height: 200px;
	width: 200px;
	color: #f3f6f8;
	margin: 30px 0;	
	box-shadow: 0px 0px 0px 5px #fff inset;
}
.service-wrapper .full-rounded i {
	position: relative;
	top: 65px;
	left: 1px;
}
.service-wrapper:hover {
	text-decoration: none;
	top: -10px;
	-webkit-transition: 0.25s;
	   -moz-transition: 0.25s;
		-ms-transition: 0.25s;
			transition: 0.25s;
}
/* ======================================================================== */
/* ! Portfolio
/* ======================================================================== */
#portfolio-list,
#portfolio-filter {
	list-style: none;
	margin-top: 30px;
}
#portfolio-list .block {
	margin-bottom: 30px;
}
#portfolio-filter a {
	background: transparent;
	box-shadow: 0px 0px 0px 2px #656870 inset;
	color: #656870;
}
#portfolio-filter a:hover {
	color: #9a9eab;
}
#portfolio-filter .active a {
	box-shadow: none;
}
.portfolio-image {
	margin: 0 auto;
}
/* ======================================================================== */
/* ! Contact
/* ======================================================================== */
.contact-form button {

}
.map iframe {
	width: 100%;
	height: 400px;
	border: none;
	padding: 0;
	margin: 0 0 -5px;
}
/* ======================================================================== */
/* ! Blog
/* ======================================================================== */
.post {
	border-bottom: 1px solid #ddd;
}
.post:last-of-type {
	border-bottom: none;
}
.widget-wrapper {
	background: #fff;
	padding: 30px;
	-webkit-box-sizing: border-box;
	   -moz-box-sizing: border-box;
		-ms-box-sizing: border-box;
			box-sizing: border-box;
}
.widget .tab-content {
	background: #fff;
	padding: 30px;
	border-bottom: none;
	border-left: none;
	border-right: none;
}
.widget .nav-tabs,
.widget .nav-tabs > .active > a, 
.widget .nav-tabs > .active > a:hover, 
.widget .nav-tabs > .active > a:focus,
.widget .nav-tabs > li > a {
	border: none;
}
.widget .nav-tabs > li {
	margin: 0 1px 0 0;
	padding: 0;
}
.widget {
	margin-bottom: 60px;
}
.widget ul {
	list-style: none;
	list-style-position: inside;
	margin: 0;
}
.widget ul li {
	padding: 0 0 0 10px;
	margin: 0 0 10px;
}
.widget ul li:last-of-type {
	margin: 0;
}
.widget ul li i.icon-caret-right {
	margin: 0 0 0 -10px;
}
.post a:hover .hover {
	opacity: 0.85;
	filter: alpha(opacity=85);
}
.post a.overlay {
	display: block;
	overflow: hidden;
	position: relative;
}
.post a .hover {
	top: 0;
	left: 0;
	width: 100%;
	height: auto;
	padding: 30% 0 35%;
	text-align: center;
	position: absolute;
	color: #fff;
	-webkit-transition: opacity .25s ease-in-out;
	   -moz-transition: opacity .25s ease-in-out;
		-ms-transition: opacity .25s ease-in-out;
			transition: opacity .25s ease-in-out;
	opacity: 0;
	filter: alpha(opacity=0);
	font-size: 16px;
}
.comment-avatar {
	width: 64px;
	height: 64px;
}
.comment-container {
	padding: 30px 0;
}
ul.media-list li.media div.comment-holder {
	border-bottom: 1px dashed #CDCDCD;
	margin: 0 0 20px !important;
	padding: 10px 0 20px;
}
/* ======================================================================== */
/* ! Bootstrap resetting elements for flat design
/* ======================================================================== */
.btn,
.progress .bar {
	background-image: none;
}
textarea, 
input[type="text"], 
input[type="password"], 
input[type="datetime"], 
input[type="datetime-local"], 
input[type="date"], 
input[type="month"], 
input[type="time"], 
input[type="week"], 
input[type="number"], 
input[type="email"], 
input[type="url"], 
input[type="search"], 
input[type="tel"], 
input[type="color"], 
.uneditable-input,
.dropdown-menu,
.navbar .nav > .active > a, 
.navbar .nav > .active > a:hover, 
.navbar .nav > .active > a:focus,
.progress .bar {
	text-shadow: none;
	-webkit-box-shadow: none;
	   -moz-box-shadow: none;
		-ms-box-shadow: none;
			box-shadow: none;
}

/* ======================================================================== */
/* !Custom classes classes
/* ======================================================================== */

.program {
	line-height: 40px;
	margin-bottom: 40px;
}

.course-info {
/*	border: 1px solid #9CE1F2;
	-webkit-border-radius: 5px;
	-moz-border-radius: 5px;
	border-radius: 5px;*/
	width: 1000px;
	padding: 0px 20px 20px 20px;
	margin: 10px auto;
	

}	

/*.dates {
	margin-right: 10px;
}*/

.course-info h3 {
	margin: 10px;
	font-weight: bold;
}

.course-info h4 {
	margin: 0;
}

.apply-box a {
	color: #98E6FA;
	font-weight: bold;
}

.apply-box a:hover {
	color: #6cd2ec;
	font-weight: bold;
}

.apply-form {
	width: 700px;
	margin: 0 auto;
}

.pillar-box {
	height: 170px;
}

.day-box {
	margin-top: 55px;
}

/* ======================== */
/* MEET THE TEAM CUSTOM */
/* ======================== */

.centre-team {
	display: inline-block;
	margin: 0 auto;
}

#youtube-nKIu9yen5nc {
	border: 8px solid #6cd2ec;
	-webkit-border-radius: 5px;
	   -moz-border-radius: 5px;
		-ms-border-radius: 5px;
			border-radius: 5px;
}

.acceptance h2 {
	font-size: 40px;
	margin-bottom: 40px;
}

